@startuml

title __CSC-372-1's Class Diagram__\n

  namespace Week1 {
    class Week1.BankAccount {
    }
  }
  

  namespace Week1 {
    class Week1.CheckingAccount {
    }
  }
  

  namespace Week1 {
    class Week1.TestBankAccount {
    }
  }
  

  namespace Week2 {
    class Week2.BankBalanceApp {
    }
  }
  

  namespace Week2 {
    class Week2.CoolWall {
    }
  }
  

  namespace Week2 {
    class Week2.SimpleContactForm {
    }
  }
  

  namespace Week3 {
    class Week3.BorderLayoutExample {
    }
  }
  

  namespace Week3 {
    class Week3.CarDashboard {
    }
  }
  

  namespace Week3 {
    class Week3.ColorService {
    }
  }
  

  namespace Week3 {
    class Week3.DateTimeService {
    }
  }
  

  namespace Week3 {
    class Week3.FileService {
    }
  }
  

  namespace Week3 {
    class Week3.MenuInterface {
    }
  }
  

  namespace Week4 {
    class Week4.Cone {
    }
  }
  

  namespace Week4 {
    class Week4.Cylinder {
    }
  }
  

  namespace Week4 {
    abstract class Week4.Shape {
    }
  }
  

  namespace Week4 {
    class Week4.ShapeArray {
    }
  }
  

  namespace Week4 {
    class Week4.Sphere {
    }
  }
  

  Week1.CheckingAccount -up-|> Week1.BankAccount
  Week2.BankBalanceApp .up.|> java.awt.event.ActionListener
  Week2.BankBalanceApp -up-|> javax.swing.JFrame
  Week2.CoolWall -up-|> javax.swing.JFrame
  Week3.CarDashboard -up-|> javax.swing.JFrame
  Week3.MenuInterface -up-|> javax.swing.JFrame
  Week3.MenuInterface o-- Week3.ColorService : colorService
  Week3.MenuInterface o-- Week3.DateTimeService : dateTimeService
  Week3.MenuInterface o-- Week3.FileService : fileService
  Week4.Cone -up-|> Week4.Shape
  Week4.Cylinder -up-|> Week4.Shape
  Week4.Sphere -up-|> Week4.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
